--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "express": "^4.16.3",
     "mysql2": "^1.6.4",
     "request": "^2.88.0",
-    "sequelize": "^4.41.2"
+    "sequelize": "^4.41.2",
+    "stargazing-time": "^1.0.0"
   }
 }
