--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
   "author": "Sam, Chris, Trevor, Leevie",
   "license": "ISC",
   "dependencies": {
+    "chai": "^4.2.0",
+    "chai-http": "^4.3.0",
     "cheerio": "^1.0.0-rc.3",
     "express": "^4.16.3",
     "mysql2": "^1.6.4",
